--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,12 @@ body{
     min-height: 300px;
 }
 
-
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
 
     
     
